fix: add margin to checkbox for improved spacing

--- a/src/components/routes/publicar/publicar.css
+++ b/src/components/routes/publicar/publicar.css
@@ -351,6 +351,7 @@ input[type=checkbox]{
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin: 20px 0;
 }
 
 .meli-login-button:hover {
